tests/fail/LeftBitShift.java
package fail;

import java.lang.System;

public class LeftBitShift {

  public static void main(String[] args ) {
    "hello" << 2;
  }

}
